--- a/index.html
+++ b/index.html
@@ -27,8 +27,23 @@
 <body>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="js/firebase.ts"></script>
   <script src="js/main.ts"></script>
+  <div id="container">
+    <div id="header">
+      <div id="heading">The Clock</div>
+      <div id="toolbar">
+        <label for="clock-type-current-time">Current Time</label>
+        <input type="radio" id="clock-type-current-time" name="clock-type" value="current-time" checked />
+        <label for="clock-type-test">Test</label>
+        <input type="radio" id="clock-type-test" name="clock-type" value="current-time" />
+      </div>
+    </div>
 
+    <div id="clock"></div>
+    <div id="footer">
+    </div>
+  </div>
 
 </body>
 
