--- a/src/index.html
+++ b/src/index.html
@@ -1,95 +1,13 @@
 <!doctype html>
-<html class="h-full no-js" lang="">
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The Clock</title>
-  <meta name="description" content="">
+  <title>Clock</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="The Clock App">
-  <meta property="og:description"
-        content="A simple clock app that help also help you learn analog clock by practicing.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://the-clock-app.web.app">
-  <meta property="og:image" content="https://the-clock-app.web.app/img/app-image.png">
-  <meta property="og:locale" content="en_US"/>
-
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
-
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
-
-  <link rel="stylesheet" href="css/index.css">
-
-  <meta name="theme-color" content="#fafafa">
-
-
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
-<body class="mx-auto h-full font-body">
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <!--  <script src="src/js/firebase.ts"></script>-->
-  <script src="js/main.ts" type="module"></script>
-  <div id="container" class="h-full flex flex-col ">
-    <div id="header" class="border-b-2 border-gray-300 flex flex-row items-center justify-between p-4">
-      <div id="heading" class="text-3xl">The Clock</div>
-
-      <div id="toolbar" class="relative">
-        <div class="material-symbols-outlined cursor-pointer sm:hidden" id="menu">
-          menu
-        </div>
-        <div id="toolbar-items" class="
-                  hidden flex flex-col gap-1
-                  absolute top-6 right-0
-                  bg-white border-2 border-gray-200
-                  rounded shadow-lg
-                  sm:flex
-                  sm:relative sm:flex-row sm:gap-5
-                  sm:top-auto sm:left-auto sm:border-none sm:shadow-none">
-          <div class="w-32 sm:w-auto flex gap-2 justify-start items-center m-2 sm:m-auto">
-            <input type="radio" id="clock-type-current-time" name="clock-type" value="current-time"
-                   class="cursor-pointer"/>
-            <label class="cursor-pointer grow" for="clock-type-current-time">Current Time</label>
-          </div>
-          <div class="w-32 sm:w-auto flex gap-2 justify-start items-center m-2 sm:m-auto">
-            <input type="radio" id="clock-type-learn" name="clock-type" value="learn" checked class="cursor-pointer"/>
-            <label class="cursor-pointer grow" for="clock-type-learn">Learn</label>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="clock-container" class="flex flex-col grow">
-      <div id="clock" class="flex justify-center sm:grow"></div>
-      <div id="game">
-        <div id="answer-container" class="flex flex-col justify-center">
-          <div id="answers" class="flex gap-5 justify-center">
-            <div class="flex gap-5 items-center">
-              <label for="hour-answer" class="w-12">Hour</label>
-              <input id="hour-answer" name="hour" type="number" class="border-2 border-gray rounded p-2 w-24"/>
-            </div>
-            <div class="flex gap-5 items-center">
-              <label for="minute-answer" class="w-12">Minute</label>
-              <input id="minute-answer" name="minute" type="number" class="border-2 border-gray rounded p-2 w-24"/>
-            </div>
-          </div>
-          <div class="flex justify-center">
-            <button id="submit-answer" class="btn btn-blue mt-2">OK</button>
-            <button id="new-question" class="hidden btn btn-blue mt-2">New Question</button>
-          </div>
-          <div id="results" class="hidden text-lg text-center flex flex-col m-5 p-2 border-2 invalid rounded-2xl">
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <div id="footer" class="">
-    </div>
-  </div>
-
+<body>
+  <app-root></app-root>
 </body>
-
 </html>
